--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -3,6 +3,7 @@
   --secondary-color: #1d93ff;
   --body-background: var(--primary-color);
   --navbar-background: var(--primary-color);
+  --notification-background: #ededed;
   --shadow-light: #efefef;
   --shadow-dark: #d2d2d2;
   --border-color: #e6e6e6;
@@ -20,6 +21,7 @@
   --secondary-color: #1d93ff;
   --body-background: #1c1c1c;
   --navbar-background: var(--body-background);
+  --notification-background: #2c2c2c;
   --shadow-light: #1a1a1a;
   --shadow-dark: #0e0e0e;
   --border-color: var(--shadow-dark);
